--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.23.3",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "prisma": "^6.11.1",
